[gd_scene load_steps=4 format=3 uid="uid://crlnqrfn7l1kf"]

[ext_resource type="Script" path="res://ui/buttons.gd" id="1_f3gho"]
[ext_resource type="Texture2D" uid="uid://ctp5p7kjghwye" path="res://res/temp_buts.png" id="2_xbqkg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mqe6q"]
radius = 134.536

[node name="buttons" type="Node2D"]
script = ExtResource("1_f3gho")

[node name="TempButs" type="Sprite2D" parent="."]
position = Vector2(-1, -1)
texture = ExtResource("2_xbqkg")
hframes = 10

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mqe6q")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
